<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <RelativeLayout
            android:id="@+id/relFlag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/flagCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/kuwaitflag" />

            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/dt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/flagCard"
                android:fontFamily="@font/zs_regular"
                android:paddingStart="10dp"
                android:text="@string/deliver_to"
                android:textColor="@color/black"
                android:textSize="10sp"
                tools:ignore="RtlSymmetry" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dt"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/flagCard"
                android:fontFamily="@font/zs_semibold"
                android:paddingStart="10dp"
                android:text="Kuwait"
                android:textColor="@color/black" />
        </RelativeLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/light_grey"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="10dp"
                android:src="@drawable/user"
                app:tint="@color/purpleColor" />

        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="3dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageView
                        android:id="@+id/imgSearch"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:padding="15dp"
                        android:src="@drawable/loupe"
                        app:tint="@color/purpleColor" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@id/imgSearch"
                        android:background="@null"
                        android:fontFamily="@font/zs_regular"
                        android:hint="@string/search"
                        android:textColorHint="@color/purpleColor"
                        android:textSize="16sp" />


                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="15dp">

                    <com.smarteist.autoimageslider.SliderView
                        android:id="@+id/sliderView"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        app:sliderAnimationDuration="600"
                        app:sliderAutoCycleDirection="back_and_forth"
                        app:sliderAutoCycleEnabled="true"
                        app:sliderCircularHandlerEnabled="true"
                        app:sliderIndicatorAnimationDuration="600"
                        app:sliderIndicatorGravity="center_horizontal|bottom"
                        app:sliderIndicatorMargin="20dp"
                        app:sliderIndicatorOrientation="horizontal"
                        app:sliderIndicatorPadding="3dp"
                        app:sliderIndicatorRadius="1dp"
                        app:sliderIndicatorSelectedColor="@color/purpleColor"
                        app:sliderIndicatorUnselectedColor="@color/light_grey"
                        app:sliderScrollTimeInSec="1"
                        app:sliderStartAutoCycle="true" />

                </com.google.android.material.card.MaterialCardView>

              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/zs_semibold"
                    android:text= "@string/shop_by"
                    android:textColor="@color/black"
                    android:id="@+id/txt1"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/shopByrecycler"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/txt1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:overScrollMode="never" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15dp"
                    android:id="@+id/rl_shop"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:id="@+id/txt_shop"
                        android:fontFamily="@font/zs_semibold"
                        android:text="@string/viewall"
                        android:textColor="@color/white"
                        android:background="@drawable/orange_round"
                        android:textSize="16dp" />

                </RelativeLayout>
              </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:id="@+id/txt2"
                        android:fontFamily="@font/zs_semibold"
                        android:text="@string/collaborations"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/collaborationrecycler"
                        android:layout_width="match_parent"
                        android:layout_below="@+id/txt2"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never" />


             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="15dp"
                 android:id="@+id/rl_collb"
                 android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:id="@+id/txt_collabration"
                        android:fontFamily="@font/zs_semibold"
                        android:text="@string/viewall"
                        android:textColor="@color/white"
                        android:background="@drawable/orange_round"
                        android:textSize="16dp" />

             </RelativeLayout>
                </RelativeLayout>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:id="@+id/txt5"
                        android:fontFamily="@font/zs_semibold"
                        android:text="@string/occasion"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/occationrecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt5"
                        android:layout_marginTop="15dp"
                        android:overScrollMode="never" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="15dp"
                        android:id="@+id/rl_occation"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:id="@+id/txt_ocation"
                            android:fontFamily="@font/zs_semibold"
                            android:text="@string/viewall"
                            android:textColor="@color/white"
                            android:background="@drawable/orange_round"
                            android:textSize="16dp" />

                    </RelativeLayout>
                </RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/zs_semibold"
                    android:text="@string/subscription"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/subcriptionRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:overScrollMode="never" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15dp"
                    android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:id="@+id/txt3"
                    android:fontFamily="@font/zs_semibold"
                    android:text="@string/product"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/productRecycler"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/txt3"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:overScrollMode="never" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15dp"
                    android:id="@+id/rl_designer"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:id="@+id/txt_designer"
                        android:fontFamily="@font/zs_semibold"
                        android:text="@string/viewall"
                        android:textColor="@color/white"
                        android:background="@drawable/orange_round"
                        android:textSize="16dp" />

                </RelativeLayout>
             </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/zs_semibold"
                    android:text="@string/best_seller"
                    android:id="@+id/txt4"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/whatsNewRecycler"
                    android:layout_below="@+id/txt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:overScrollMode="never" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15dp"
                    android:id="@+id/rl_bestSeller"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:id="@+id/txt_seller"
                        android:fontFamily="@font/zs_semibold"
                        android:text="@string/viewall"
                        android:textColor="@color/white"
                        android:background="@drawable/orange_round"
                        android:textSize="16dp" />
                </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progressbar"
        android:visibility="gone"></ProgressBar>

</LinearLayout>