<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">


    <TextView
        android:id="@+id/selectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/zs_semibold"
        android:text="@string/select_date"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/zs_semibold"
                    android:text="@string/today"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/todayDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/zs_semibold"
                    android:textSize="16sp" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/zs_semibold"
                    android:text="@string/tomorrow"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/nextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/zs_semibold"
                    android:textSize="14sp" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:id="@+id/linearDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:src="@drawable/calender"
                    app:tint="#989898" />

                <TextView
                    android:id="@+id/selectedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/zs_semibold"
                    android:text="More Dates"
                    android:textSize="14sp" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <TextView
        android:id="@+id/selectTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/zs_semibold"
        android:text="@string/select_date"
        android:textSize="20sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/timeRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />


    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="Continue"
        android:backgroundTint="@color/purpleColor"
        app:cornerRadius="30dp" />


</LinearLayout>