<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CartActivity">

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:src="@drawable/back"
            app:tint="@color/purpleColor" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/back"
            android:fontFamily="@font/zs_semibold"
            android:text="@string/cart"
            android:textColor="@color/purpleColor"
            android:textSize="18sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rel"
        android:layout_above="@+id/btmCard">





    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flowerListRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/zs_semibold"
                android:text="@string/delivery"
                android:textSize="18sp"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/zs_regular"
                android:text="30/11/2020 9am-2pm" />

        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="5dp"
            app:contentPadding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/tag"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="13dp"
                    android:src="@drawable/tag"
                    app:tint="@color/purpleColor" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/tag"
                    android:fontFamily="@font/zs_semibold"
                    android:text="Add a voucher code" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reedem"
                    android:textAllCaps="false"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btmCard"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/zs_semibold"
                android:paddingStart="15dp"
                android:text="KWD 39.000"
                android:textColor="@color/purpleColor"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />


            <Button
                android:id="@+id/btnPlaceOrder"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/purpleColor"
                android:fontFamily="@font/zs_medium"
                android:text="@string/place_order"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="30dp"
                app:rippleColor="@color/white" />


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>